# midas-journal-694

Paper/: ArticleMANCOVA.aux  ArticleMANCOVA.bbl  ArticleMANCOVA.blg  ArticleMANCOVA.brf  ArticleMANCOVA.dvi  ArticleMANCOVA.out  ArticleMANCOVA.tex  ArticleMANCOVA.toc  InsightJournal.bib  Mybib.bib
Source/: CMakeCache.txt  CMakeCache.txt~  CMakeLists.txt  CMakeLists.txt~  MANCOVA.h  Makefile  cmake_install.cmake  miscMANCOVA.cxx  miscMANCOVA.cxx~  miscMANCOVA.h  miscMANCOVA.h~  newTypes.h  nonMANCOVA.cxx  nonMANCOVA.h  shapeAnalysisMANCOVA.cxx  shapeAnalysisMANCOVA.cxx~  shapeAnalysisMANCOVA.xml  shapeAnalysisMANCOVACLP.h  shapeAnalysisMANCOVACLP.h~
